fixed speech bubble and added cutscene stuck
The speech bubble of the counter speech was wrong and fixed it with help of Nick (thx)

Added that you cant walk away or do other things while you are in a cutscene

--- a/css/main.css
+++ b/css/main.css
@@ -46,13 +46,17 @@ p {
     padding: 10px;
 }
 
+
+
 /* Iteractable things */
 #door1 {
-    width: 64px;
-    height: 64px;
-    background-color: rgb(119, 62, 36);
-    top: 200px;
-    left: 600px;
+    width: 32px;
+    height: 50px;
+
+    opacity: 1;
+    top: 302px;
+    left: 177px;
+    opacity: 0;
 }
 
 #sign1 {
@@ -60,7 +64,23 @@ p {
     height: 30px;
     background-color: rgb(21, 255, 0);
     top: 500px;
-    left: 400px;
+    left: 600px;
+}
+
+#key1 {
+    width: 45px;
+    height: 36px;
+    opacity: 1;
+    top: 109px;
+    left: 298px;
+}
+
+#statue1 {
+    width: 32px;
+    height: 70px;
+    opacity: 1;
+    top: 280px;
+    left: 704px;
 }
 
 /* Dialog */
@@ -83,25 +103,33 @@ p {
 }
 
 #mainCharacterSpeech {
-    left: 0px;
-    bottom: 0px;
-    background-color: red;
-    width: 100px;
-    height: 100px;
+    left: 72px;
+    top: 0px;
 }
 
 #counterSpeech {
+    right: 72px;
+    top: 0px;
+}
+
+#mainCharacterAvatar {
+    left: 0px;
+    bottom: 0px;
+    width: 72px;
+    height: 68px;
+}
+
+#counterAvatar {
     right: 0px;
     bottom: 0px;
-    background-color: blue;
-    width: 100px;
-    height: 100px;
+    width: 72px;
+    height: 68px;
+    opacity: 0;
 }
 
 #mainCharacterId {
     width: 32px;
     height: 32px;
-    background-color: rgb(255, 0, 0);
     left: 400px;
     top: 200px;
 }
@@ -133,4 +161,15 @@ p {
     z-index: 0;
     top: auto;
     left: auto;
+}
+
+.speech-bubble {
+    background-color: white;
+    border-radius: 60px;
+    color: black;
+    padding: 5px 20px 5px 20px;
+    font-size: 12px;
+    max-width: 300px;
+    transition: all 1s ease-in-out;
+    opacity: 0;
 }
